--- a/index.html
+++ b/index.html
@@ -52,7 +52,52 @@
                 <button type="button" class="primary-button">Explore More</button>
             </div>
         </div>
+        <!-- Feature start -->
+        <div class="feature-section"></div>
+        <!-- Feature end -->
+
+        <div class="facts-section">
+            <h3>Some Facts</h3>
+            <p>There are many variations of passages of Lorem Ipsum<br> available, but the majority have suffered alteration.</p>
+            <div class="facts-card">
+                <div class="fact-cards-items">
+                    <img src="img/icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="fact-cards-items">
+                    <img src="img/icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <p>Project Finished</p>
+                </div>
+                <div class="fact-cards-items">
+                    <img src="img/icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="fact-cards-items">
+                    <img src="img/icons/email.png" alt="">
+                    <h2>22589</h2>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </div>
+        <div class="our-sponsor-section">
+            <div class="sponsor-top-text">
+                <h2>Our Sponspors</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-bottom-text">
+                <img src="img/sponsors/spotify.png" alt="">
+                <img src="img/sponsors/amazon.png" alt="">
+                <img src="img/sponsors/google.png" alt="">
+                <img src="img/sponsors/telerama.png" alt="">
+                <img src="img/sponsors/figma.png" alt="">
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy; All Rights Reserved By Nayem Ahmed</p>
+    </footer>
 </body>
 </html>
