--- a/index.html
+++ b/index.html
@@ -53,7 +53,35 @@
             </div>
         </div>
         <!-- Feature start -->
-        <div class="feature-section"></div>
+        <div class="feature-section">
+            <div class="feature-left-text">
+                <h2 class="border-left-f">Features you will<br> love & enjoy</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-card">
+                    <h3>Dexktop & Mobile Version</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Drag & Drop Builder</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Awesome Modern Design</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Super Easy to Edit</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-right-img">
+                <img src="img/architect.png" alt="">
+                <div class="img-bottom-button">
+                   <h2>10+Year</h2>
+                   <p>Experience</p>
+                </div>
+            </div>
+        </div>
         <!-- Feature end -->
 
         <div class="facts-section">
